--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "TAU-FRONTEND": {
+    "almost-jira-front": {
       "root": "",
       "sourceRoot": "src",
       "projectType": "application",
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/TAU-FRONTEND",
+            "outputPath": "dist/almost-jira-front",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -23,7 +23,8 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "../almost-jira-front/node_modules/ngx-toastr/toastr.css"
             ],
             "scripts": []
           },
@@ -50,18 +51,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "TAU-FRONTEND:build"
+            "browserTarget": "almost-jira-front:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "TAU-FRONTEND:build:production"
+              "browserTarget": "almost-jira-front:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "TAU-FRONTEND:build"
+            "browserTarget": "almost-jira-front:build"
           }
         },
         "test": {
@@ -95,7 +96,7 @@
         }
       }
     },
-    "TAU-FRONTEND-e2e": {
+    "almost-jira-front-e2e": {
       "root": "e2e/",
       "projectType": "application",
       "architect": {
@@ -103,11 +104,11 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "TAU-FRONTEND:serve"
+            "devServerTarget": "almost-jira-front:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "TAU-FRONTEND:serve:production"
+              "devServerTarget": "almost-jira-front:serve:production"
             }
           }
         },
@@ -123,5 +124,5 @@
       }
     }
   },
-  "defaultProject": "TAU-FRONTEND"
+  "defaultProject": "almost-jira-front"
 }
